--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "simple-express-server",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "simple express server with JSON api built with es6 syntax",
   "main": "dist",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
-    "test": "eslint src"
+    "dev": "nodemon src",
+    "start": "node src"
   },
   "repository": {
     "type": "git",
@@ -29,11 +26,6 @@
     "morgan": "^1.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.1.1",
     "nodemon": "^1.9.2"
   }
 }
