--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "simple-express-server",
   "private": true,
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "simple express server with JSON api built with es6 syntax",
-  "main": "dist",
+  "main": "src",
   "scripts": {
     "dev": "nodemon src",
     "start": "node src"
@@ -12,8 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/joshterrill/simple-express-server.git"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Josh Terrill",
   "license": "MIT",
   "bugs": {
@@ -22,6 +21,7 @@
   "homepage": "https://github.com/joshterrill/simple-express-server#readme",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "dotenv": "^5.0.1",
     "express": "^4.13.3",
     "morgan": "^1.6.1"
   },
